Major portfolio management system implementation and architecture improvements
- Add comprehensive lowcap portfolio manager module with:
  * Uptrend engine for trend analysis and position management
  * Technical analysis tracker with geometry and zigzag patterns
  * Portfolio bands calculation and dominance tracking
  * Spiral decision engine for phase-based trading decisions
  * Event bus system for modular communication
  * Hyperliquid WebSocket integration for real-time data

- Database schema enhancements:
  * New schemas for portfolio bands, phase state, and uptrend events
  * Migration scripts for portfolio management columns
  * OHLC price data schemas for majors and lowcap tokens
  * Enhanced position tracking with PM-specific columns

- Core trading system improvements:
  * Enhanced entry/exit planning with better risk management
  * Improved EVM executors with better error handling
  * Updated trader service with portfolio management integration
  * Enhanced social ingest for better signal processing
  * Improved position monitoring capabilities

- Documentation and architecture:
  * Comprehensive PM architecture documentation
  * Uptrend engine specifications and build plans
  * Entry/exit strategy documentation
  * Learning system integration guides

- Configuration updates:
  * New PM configuration with comprehensive settings
  * Updated Twitter curators configuration
  * Enhanced module triggering engine

- Cleanup:
  * Removed obsolete test and update scripts
  * Consolidated database update operations

This commit represents a major architectural evolution toward a more sophisticated,
data-driven portfolio management system with enhanced risk controls and
systematic trading capabilities.

--- a/src/config/twitter_curators.yaml
+++ b/src/config/twitter_curators.yaml
@@ -208,6 +208,16 @@ curators:
     tags: ["alpha", "calls", "lotus"]
     notes: "Lotus Alpha Telegram channel; verified TG channel id -1003105710301"
 
+  - id: "tonybetw"
+    name: "TonyBetW"
+    platforms:
+      twitter:
+        handle: "@TonyBetW"
+        active: true
+        priority: "medium"
+    tags: ["crypto", "trading", "alpha"]
+    notes: "Twitter curator added via request"
+
 # Example of curator with both Twitter and Telegram
 # - id: "example_curator"
 #   name: "Example Curator"
