Finalize learning system docs and PM cleanup

--- a/env.example
+++ b/env.example
@@ -72,3 +72,8 @@ DISCORD_CHANNEL_ID=1405408713505771652  # Conservative channel
 # Telegram Signal Notifications
 TELEGRAM_BOT_TOKEN=your_telegram_bot_token
 TELEGRAM_CHANNEL_ID=@your_private_group_username  # or numeric ID like -1001234567890
+
+
+# Trading Configuration
+TRADING_ENABLED=false
+ACTIONS_ENABLED=1
