Update Twitter curator handle format

--- a/src/config/twitter_curators.yaml
+++ b/src/config/twitter_curators.yaml
@@ -216,7 +216,7 @@ curators:
     name: "TonyBetW"
     platforms:
       twitter:
-        handle: "tonyGewrit"
+        handle: "@tonyGewrit"
         active: true
         priority: "medium"
     tags: ["crypto", "trading", "alpha"]
