Improve episode blocking, allocation, and system optimizations
- Add P&L gate to episode blocking (only block if P&L < 0)
- Require S2 breakout before S1 retest entry
- Increase default allocation from 4% to 25% (with 10-40% range)
- Optimize TA tracker query (fetch up to 200 at once, then chunk)
- Add diagnostic logging for pool checks in S2/S3 buy logic
- Improve balance snapshot with positions array in JSONB
- Add positions JSONB column to wallet_balances schema
- Reduce Twitter scanner noise (only show output when tokens found)
- Add new curator (turtle) to twitter_curators.yaml
- Add episode blocking logging configuration
- Various code improvements and bug fixes

--- a/src/config/twitter_curators.yaml
+++ b/src/config/twitter_curators.yaml
@@ -585,6 +585,16 @@ curators:
     tags: ["alpha", "calls", "multi_platform"]
     notes: "Multi-platform curator; Twitter @NobleIrons7de and Telegram channel 'Alphas in Valhalla ⚔️' (channel ID: -1001605794606)"
 
+  - id: "turtle"
+    name: "Turtle"
+    platforms:
+      twitter:
+        handle: "@turtleonchain"
+        active: true
+        priority: "medium"
+    tags: ["alpha", "calls"]
+    notes: "Twitter curator added via request"
+
 # Example of curator with both Twitter and Telegram
 # - id: "example_curator"
 #   name: "Example Curator"
