Remove Telegram session files from repository (security)
- Add *.session files to .gitignore
- Remove telegram session files from git tracking
- These files contain authentication tokens and should not be in the repository

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,11 @@ secrets/
 *.key
 *.pem
 
+# Telegram session files (contain authentication tokens)
+*.session
+telegram_session*.session
+signal_bot.session
+
 # Database files
 *.db
 *.sqlite
